# WangWangPhone

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  version.properties
.github/workflows/: all-platforms-build.yml  android-build.yml  build-unsigned.yml  ios-build.yml  web-build.yml  windows-build.yml
assets/prompt/: roleplay_prompt_v3.txt  v4_improvement_suggestions.md
assets/wechat_ui_assets/: COLORS.md  README.md
docs/: ANDROID_WEB_WIDGET_MARKET_TODO.md  IOS_ANDROID_ALIGNMENT_TODO.md  IOS_安卓基线对齐TODO.md
docs/architecture/: data_persistence_strategy.md  llm_chat_integration_plan.md  ui_and_licensing_spec.md  ui_component_breakdown.md
docs/features/: android_platform_feature_analysis.md  ui_virtual_os_spec.md  ui_wechat_clone_spec.md
docs/old/: LLM集成.md  README.md  image_generation_api_spec.md  location_and_weather.md  关于用户数据JSON格式导出的开发者文档.md  后台服务.md  数据库设计.md  数据模型.md  架构总览.md  消息解析.md  状态管理.md  表情包系统.md
src/core/: CMakeLists.txt
src/core/include/: ChatManager.h  DatabaseManager.h  LicenseManager.h  ResponseParser.h
src/core/src/: ChatManager.cpp  ChatManagerJni.cpp  DatabaseManager.cpp  LicenseManager.cpp  ResponseParser.cpp  placeholder.cpp
src/web_prototype/: index.html
src/web_prototype/css/: chat.css
src/web_prototype/js/: chat.js  homescreen.js  layout.js  license.js  location.js  weather.js
src/web_prototype/js/libs/: pinyin-pro.js
tools/: license_batch.js  license_gui.html  license_server.js  license_tool.js
tools/keys/: private.pem  public.pem
